--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.13.0",
     "argon2": "^0.43.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
+    "class-transformer": "0.5.1",
+    "class-validator": "^0.13.2",
     "helmet": "^8.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
